--- a/package.json
+++ b/package.json
@@ -6,26 +6,17 @@
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
     "storybook-next-component": "nx run next-component:storybook",
-    "build-stack": "npx nx run stack-ui:build:production",
-    "build-core": "npx nx run core-lib:build:production",
-    "build-directus-node": "npx nx run directus-node:build:production",
-    "build-directus-query": "npx nx run directus-query:build:production",
-    "build-directus-block": "npx nx run directus-block:build:production",
-    "build-directus-next-component": "npx nx run directus-next-component:build:production",
-    "build-next-component": "npx nx run next-component:build:production",
-    "publish-stack": "npx npm publish --access public dist/libs/stack/stack-ui",
-    "publish-core": "npx npm publish --access public dist/libs/stack/core-lib",
-    "publish-directus-node": "npx npm publish --access public dist/libs/directus/directus-node",
-    "publish-directus-query": "npx npm publish --access public dist/libs/directus/directus-query",
-    "publish-directus-block": "npx npm publish --access public dist/libs/directus/directus-block",
-    "publish-directus-next-component": "npx npm publish --access public dist/libs/directus/directus-next-component",
-    "publish-next-component": "npx npm publish --access public dist/libs/stack/next-component",
+    "dry-release": "nx release --dry-run",
+    "release": "nx release",
+    "dry-first-release": "nx release --first-release --dry-run",
+    "first-release": "nx release --first-release",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || npx husky install"
   },
   "private": true,
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
     "@nx/next": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
@@ -41,12 +32,12 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
-    "next": "14.2.3",
+    "next": "^14.0.4",
     "radash": "11.0.0",
-    "react": "18.3.1",
+    "react": "^18.2.0",
     "react-aria": "^3.32.0",
     "react-div-100vh": "0.7.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "7.49.2",
     "react-i18next": "13.5.0",
     "react-spring": "^9.7.3",
@@ -88,31 +79,31 @@
     "@storybook/react-webpack5": "7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
-    "@svgr/rollup": "8.1.0",
+    "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.3.14",
     "@swc/core": "1.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@testing-library/react": "15.0.6",
+    "@testing-library/react": "14.1.2",
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
-    "core-js": "3.36.1",
-    "cypress": "13.9.0",
-    "eslint": "8.57.0",
+    "core-js": "^3.6.5",
+    "cypress": "^13.6.1",
+    "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "2.15.1",
@@ -135,15 +126,15 @@
     "jsdom": "~23.0.1",
     "nx": "19.3.1",
     "nx-cloud": "19.0.0",
-    "postcss": "8.4.38",
+    "postcss": "8.4.32",
     "prettier": "^3.1.1",
     "slugify": "1.6.6",
     "swc-loader": "0.2.3",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "3.4.0",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5",
+    "typescript": "5.3.3",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
