--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
     "@nx/next": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
@@ -52,6 +53,7 @@
     "babel-loader": "^9.1.3",
     "dequal": "^2.0.3",
     "graphql": "^16.8.1",
+    "graphql-codegen": "^0.4.0",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "2.10.0",
     "lodash.isequal": "4.5.0",
