--- a/libs/stack/core-lib/project.json
+++ b/libs/stack/core-lib/project.json
@@ -45,6 +45,8 @@
           "mode": "production"
         }
       }
-    }
+    },
+    "poject-dry-release": {},
+    "project-release": {}
   }
 }
