chore(release): fix typo in project-dry-releae

--- a/libs/directus/directus-node/project.json
+++ b/libs/directus/directus-node/project.json
@@ -38,7 +38,7 @@
         "jestConfig": "libs/directus/directus-node/jest.config.ts"
       }
     },
-    "poject-dry-release": {},
+    "project-dry-release": {},
     "project-release": {}
   }
 }
