--- a/libs/directus/directus-flexible-content/tsconfig.lib.json
+++ b/libs/directus/directus-flexible-content/tsconfig.lib.json
@@ -4,7 +4,12 @@
     "outDir": "../../../dist/out-tsc",
     "types": [
       "node",
-      "vite/client"
+      "next"
+    ]
+  },
+  "paths": {
+    "@workspace/*": [
+      "dist/libs/*"
     ]
   },
   "files": [
@@ -19,7 +24,9 @@
     "**/*.spec.js",
     "**/*.test.js",
     "**/*.spec.jsx",
-    "**/*.test.jsx"
+    "**/*.test.jsx",
+    "**/*.stories.ts",
+    "**/*.stories.js"
   ],
   "include": [
     "**/*.js",
