--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -11,20 +11,26 @@ on:
       - opened
       - synchronize
       - reopened
-
 jobs:
   chromatic:
+    name: Run Chromatic
     runs-on: ubuntu-latest
-    container: node:18
-    strategy:
-      matrix:
-        node-version: [18.x]
     steps:
-      - name: Publish Project to Chromatic
-        uses: chromaui/action@v1
-        # Chromatic GitHub Action options
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          # 👇 Chromatic projectToken, refer to the manage page to obtain it.
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          storybookBuildDir: dist/libs/stack/stack-ui
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install dependencies
+        # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
+        run: npm ci
+      - name: Run Chromatic
+        uses: chromaui/action@latest
+        with:
+          # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
+          projectToken: ${{ secrets.CHROMATIC_TOKEN }}
+          storybookBaseDir: libs/stack/stack-ui/src/storybook
+          workingDir: libs/stack/stack-ui/
 
