fix(release): publish build

--- a/libs/directus/directus-block/project.json
+++ b/libs/directus/directus-block/project.json
@@ -38,6 +38,11 @@
         ]
       }
     },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/directus/{packageName}"
+      }
+    },
     "project-dry-release": {},
     "project-release": {}
   }
