--- a/libs/directus/directus-next-component/project.json
+++ b/libs/directus/directus-next-component/project.json
@@ -30,6 +30,11 @@
         ]
       }
     },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/directus/{packageName}"
+      }
+    },
     "project-dry-release": {},
     "project-release": {}
   }
