--- a/libs/directus/directus-query/project.json
+++ b/libs/directus/directus-query/project.json
@@ -34,6 +34,11 @@
         }
       }
     },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/directus/{packageName}"
+      }
+    },
     "project-dry-release": {},
     "project-release": {}
   }
