--- a/libs/stack/core-lib/project.json
+++ b/libs/stack/core-lib/project.json
@@ -46,6 +46,11 @@
         }
       }
     },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/stack/{packageName}"
+      }
+    },
     "project-dry-release": {},
     "project-release": {}
   }
