--- a/libs/stack/core-lib/project.json
+++ b/libs/stack/core-lib/project.json
@@ -45,6 +45,13 @@
           "mode": "production"
         }
       }
-    }
+    },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/stack/{packageName}"
+      }
+    },
+    "project-dry-release": {},
+    "project-release": {}
   }
 }
