STACK-138 Flexible Editor Content (#145)
* test: testing flexible content

* chore(flexible-content): made wysisyg appear

* feat(flexible-content): relation blocks

* chore(flexible-content): table serializer init

* feat(flexible-editor): added react remap of components and attributes with styling possibilities

* fix(directus-flexible-content): build, use server, default attributes

--- a/libs/directus/directus-flexible-content/tsconfig.lib.json
+++ b/libs/directus/directus-flexible-content/tsconfig.lib.json
@@ -25,6 +25,8 @@
     "**/*.test.js",
     "**/*.spec.jsx",
     "**/*.test.jsx",
+    "**/*.stories.ts",
+    "**/*.stories.js"
   ],
   "include": [
     "**/*.js",
