--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "BUSL-1.1",
   "scripts": {
+    "codegen": "graphql-codegen --config ./codegen.ts",
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
     "storybook-next-component": "nx run next-component:storybook",
@@ -25,12 +26,36 @@
     "@storybook/addon-a11y": "^7.6.17",
     "@swc/helpers": "0.5.11",
     "@tanstack/react-query": "^5.17.1",
+    "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-blockquote": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-code": "^2.4.0",
+    "@tiptap/extension-code-block": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-hard-break": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-horizontal-rule": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-table": "^2.4.0",
+    "@tiptap/extension-table-cell": "^2.4.0",
+    "@tiptap/extension-table-header": "^2.4.0",
+    "@tiptap/extension-table-row": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
     "@tsed/exceptions": "^7.52.0",
     "babel-loader": "^9.1.3",
     "dequal": "^2.0.3",
     "graphql": "^16.8.1",
+    "graphql-codegen": "^0.4.0",
     "graphql-request": "^6.1.0",
-    "isomorphic-dompurify": "1.13.0",
+    "isomorphic-dompurify": "2.10.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.0.4",
     "radash": "11.0.0",
