--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,27 +10,66 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@okam/config": ["libs/shared/config/src/index.ts"],
-      "@okam/core-lib": ["libs/stack/core-lib/src/index.ts"],
-      "@okam/directus-block": ["libs/directus/directus-block/src/index.ts"],
-      "@okam/directus-block/server": ["libs/directus/directus-block/src/server.ts"],
-      "@okam/directus-flexible-content": ["libs/directus/directus-flexible-content/src/index.ts"],
-      "@okam/directus-flexible-content/server": ["libs/directus/directus-flexible-content/src/server.ts"],
-      "@okam/directus-lib": ["libs/directus/directus-lib/src/index.ts"],
-      "@okam/directus-next-component": ["libs/directus/directus-next-component/src/index.ts"],
-      "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
-      "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
-      "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
-      "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
-      "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
-      "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
-      "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
+      "@okam/config": [
+        "libs/shared/config/src/index.ts"
+      ],
+      "@okam/core-lib": [
+        "libs/stack/core-lib/src/index.ts"
+      ],
+      "@okam/directus-block": [
+        "libs/directus/directus-block/src/index.ts"
+      ],
+      "@okam/directus-block/server": [
+        "libs/directus/directus-block/src/server.ts"
+      ],
+      "@okam/directus-flexible-content": [
+        "libs/directus/directus-flexible-content/src/index.ts"
+      ],
+      "@okam/directus-flexible-content/server": [
+        "libs/directus/directus-flexible-content/src/server.ts"
+      ],
+      "@okam/directus-lib": [
+        "libs/directus/directus-lib/src/index.ts"
+      ],
+      "@okam/directus-next-component": [
+        "libs/directus/directus-next-component/src/index.ts"
+      ],
+      "@okam/directus-next-component/server": [
+        "libs/directus/directus-next-component/src/server.ts"
+      ],
+      "@okam/directus-node": [
+        "libs/directus/directus-node/src/index.ts"
+      ],
+      "@okam/directus-query": [
+        "libs/directus/directus-query/src/index.ts"
+      ],
+      "@okam/directus/directus-next": [
+        "libs/directus/directus-next/src/index.ts"
+      ],
+      "@okam/next-component": [
+        "libs/stack/next-component/src/index.ts"
+      ],
+      "@okam/next-component/server": [
+        "libs/stack/next-component/src/server.ts"
+      ],
+      "@okam/stack-ui": [
+        "libs/stack/stack-ui/src/index.ts"
+      ],
+      "@config/*": [
+        "config/*"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
