chore(release): change variable for project names

--- a/libs/directus/directus-block/project.json
+++ b/libs/directus/directus-block/project.json
@@ -65,7 +65,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/libs/directus/{packageName}"
+        "packageRoot": "dist/libs/directus/directus-block"
       }
     },
     "project-dry-release": {},
