--- a/libs/directus/directus-lib/project.json
+++ b/libs/directus/directus-lib/project.json
@@ -38,7 +38,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/libs/directus/{packageName}"
+        "packageRoot": "dist/libs/directus/directus-lib"
       }
     },
     "project-dry-release": {},
