--- a/libs/stack/core-lib/project.json
+++ b/libs/stack/core-lib/project.json
@@ -50,7 +50,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/libs/stack/{packageName}"
+        "packageRoot": "dist/libs/stack/core-lib"
       }
     },
     "project-dry-release": {},
