--- a/libs/stack/next-component/project.json
+++ b/libs/stack/next-component/project.json
@@ -79,7 +79,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/libs/stack/{packageName}"
+        "packageRoot": "dist/libs/stack/next-component"
       }
     },
     "project-dry-release": {},
