--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-spring": "^9.7.3",
     "react-stately": "^3.30.0",
     "react-use": "17.4.2",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "server-only": "^0.0.1",
     "swiper": "11.0.6",
     "tailwind-variants": "^0.1.19",
