--- a/libs/automation/src/generators/block/files/src/interface.ts.template
+++ b/libs/automation/src/generators/block/files/src/interface.ts.template
@@ -1,3 +1,4 @@
+/* eslint-disable @typescript-eslint/naming-convention */
 import type { BlockSettingsFragment } from '../../generated/graphql'
 
 export type <%= type %> = {
@@ -6,5 +7,4 @@ export type <%= type %> = {
   settings?:
     | ({ __typename?: 'block_settings' } & { ' $fragmentRefs'?: { BlockSettingsFragment: BlockSettingsFragment } })
     | null
-  // eslint-disable-next-line @typescript-eslint/naming-convention
 } & { ' $fragmentName'?: '<%= type %>' }
