--- a/libs/automation/src/generators/block/files/src/config.tsx.template
+++ b/libs/automation/src/generators/block/files/src/config.tsx.template
@@ -1,4 +1,5 @@
 import type { TBlockSerializerConfigComponent } from '@okam/directus-block'
+import React from 'react'
 import <%= componentName %> from '.'
 
 const <%= variableName %>Config: TBlockSerializerConfigComponent = {
