--- a/nx.json
+++ b/nx.json
@@ -8,7 +8,8 @@
       "directus-query",
       "directus-block",
       "directus-next-component",
-      "directus-flexible-content"
+      "directus-flexible-content",
+      "automation"
     ],
     "releaseTagPattern": "{projectName}-v{version}",
     "projectsRelationship": "independent",
