--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "2.10.0",
     "lodash.isequal": "4.5.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "radash": "11.0.0",
     "react": "18.3.1",
     "react-aria": "^3.32.0",
