--- a/libs/directus/directus-next-component/project.json
+++ b/libs/directus/directus-next-component/project.json
@@ -8,28 +8,32 @@
   ],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "@nx/linter:eslint",
+      "outputs": [
+        "{options.outputFile}"
+      ],
+      "options": {
+        "lintFilePatterns": [
+          "libs/directus/directus-next-component/**/*.{ts,tsx,js,jsx}"
+        ]
+      }
     },
     "build": {
-      "executor": "@nx/rollup:rollup",
+      "executor": "@nx/vite:build",
       "outputs": [
         "{options.outputPath}"
       ],
+      "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/libs/directus/directus-next-component",
-        "tsConfig": "libs/directus/directus-next-component/tsconfig.lib.json",
-        "project": "libs/directus/directus-next-component/package.json",
-        "entryFile": "libs/directus/directus-next-component/src/index.ts",
-        "external": "all",
-        "rollupConfig": "@nx/react/plugins/bundle-rollup",
-        "compiler": "swc",
-        "assets": [
-          {
-            "glob": "libs/directus/directus-next-component/README.md",
-            "input": ".",
-            "output": "."
-          }
-        ]
+        "outputPath": "dist/libs/directus/directus-next-component"
+      },
+      "configurations": {
+        "development": {
+          "mode": "development"
+        },
+        "production": {
+          "mode": "production"
+        }
       }
     },
     "nx-release-publish": {
