--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "private": true,
   "dependencies": {
+    "@nx/devkit": "19.3.1",
+    "@nx/plugin": "19.3.1",
     "@graphql-codegen/cli": "^5.0.2",
     "@nx/next": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
@@ -59,10 +61,10 @@
     "lodash.isequal": "4.5.0",
     "next": "^14.0.4",
     "radash": "11.0.0",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-aria": "^3.32.0",
     "react-div-100vh": "0.7.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "7.49.2",
     "react-i18next": "13.5.0",
     "react-spring": "^9.7.3",
@@ -110,22 +112,22 @@
     "@swc/cli": "0.3.14",
     "@swc/core": "1.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@testing-library/react": "14.1.2",
+    "@testing-library/react": "15.0.6",
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "@typescript-eslint/parser": "6.15.0",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
-    "core-js": "^3.6.5",
-    "cypress": "^13.6.1",
+    "core-js": "3.36.1",
+    "cypress": "^13.6.6",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -160,7 +162,7 @@
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
