--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@config/*": ["config/*"],
-      "@okam/config": ["libs/shared/config/src/index.ts"],
+      "@okam/automation": ["libs/automation/src/index.ts"],
       "@okam/core-lib": ["libs/stack/core-lib/src/index.ts"],
       "@okam/directus-block": ["libs/directus/directus-block/src/index.ts"],
       "@okam/directus-block/server": ["libs/directus/directus-block/src/server.ts"],
