--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,7 @@
       "@okam/directus-flexible-content": ["libs/directus/directus-flexible-content/src/index.ts"],
       "@okam/directus-flexible-content/server": ["libs/directus/directus-flexible-content/src/server.ts"],
       "@okam/directus-lib": ["libs/directus/directus-lib/src/index.ts"],
+      "@okam/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/directus-next-component": ["libs/directus/directus-next-component/src/index.ts"],
       "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
