chore: replace isomorphic-dompurify with sanitize-html to fix error

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "private": true,
   "dependencies": {
-    "@nx/devkit": "19.3.1",
-    "@nx/plugin": "19.3.1",
     "@graphql-codegen/cli": "^5.0.2",
+    "@nx/devkit": "19.3.1",
     "@nx/next": "19.3.1",
+    "@nx/plugin": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
@@ -57,7 +57,6 @@
     "graphql": "^16.8.1",
     "graphql-codegen": "^0.4.0",
     "graphql-request": "^6.1.0",
-    "isomorphic-dompurify": "2.10.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.1.1",
     "radash": "11.0.0",
@@ -71,6 +70,7 @@
     "react-stately": "^3.30.0",
     "react-use": "17.4.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
+    "sanitize-html": "^2.13.0",
     "server-only": "^0.0.1",
     "swiper": "11.0.6",
     "tailwind-variants": "^0.1.19",
@@ -116,11 +116,12 @@
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "@typescript-eslint/parser": "6.15.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/sanitize-html": "^2.11.0",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
