--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "private": true,
   "dependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@nx/devkit": "19.3.1",
     "@nx/next": "19.3.1",
     "@nx/plugin": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
@@ -85,6 +84,7 @@
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@nx/cypress": "19.3.1",
+    "@nx/devkit": "^19.6.2",
     "@nx/eslint-plugin": "19.3.1",
     "@nx/jest": "19.3.1",
     "@nx/js": "19.3.1",
@@ -170,5 +170,6 @@
     "vite-tsconfig-paths": "^4.2.2",
     "vitest": "1.6.0"
   },
-  "nx": {}
+  "nx": {},
+  "packageManager": "npm@10.0.0"
 }
