chore(dev): add default admin/admin user to verdaccio

--- a/.verdaccio/config.yml
+++ b/.verdaccio/config.yml
@@ -26,3 +26,8 @@ logs:
 
 publish:
   allow_offline: true # set offline to true to allow publish offline
+# Authentication settings
+auth:
+  htpasswd:
+    file: ./htpasswd
+    max_users: 1000
