--- a/nx.json
+++ b/nx.json
@@ -20,7 +20,7 @@
       }
     },
     "version": {
-      "preVersionCommand": "npx nx run-many -t build -exclude demo",
+      "preVersionCommand": "npx nx run-many -t=build --projects=tag:publishable",
       "conventionalCommits": true
     }
   },
