fix(dev): publish-local flow and documentation

--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,5 @@
 {
-  "release": {    
+  "release": {
     "projects": [
       "stack-ui",
       "core-lib",
@@ -20,8 +20,11 @@
       }
     },
     "version": {
-      "preVersionCommand": "npx nx run-many -t=build --projects=tag:publishable",
-      "conventionalCommits": true
+      "preVersionCommand": "npx nx run-many -t=build --projects=tag:publishable --generatePackageJson=true",
+      "generatorOptions": {
+        "currentVersionResolver": "git-tag",
+        "conventionalCommits": true
+      }
     }
   },
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
