--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "tailwindcss": "3.4.0",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.4.5",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.13",
@@ -171,5 +171,9 @@
     "vitest": "1.6.0"
   },
   "nx": {},
-  "packageManager": "npm@10.0.0"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "packageManager": "npm@9.8.1"
 }
