--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -1,17 +1,13 @@
 {
   "name": "@okam/directus-next",
   "main": "./index.js",
-  "version": "0.1.1",
+  "version": "0.0.0-local.1726771824724",
   "types": "./index.d.ts",
   "exports": {
     ".": {
       "import": "./index.mjs",
       "require": "./index.js"
     }
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org",
-    "access": "public"
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
