--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@okam/directus-next",
   "main": "./index.js",
-  "version": "0.0.0-local.1726777374103",
+  "version": "0.1.1",
   "types": "./index.d.ts",
   "exports": {
     ".": {
