--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,6 +27,8 @@
       "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
       "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
+      "@okam/directus-survey": ["libs/directus/directus-survey/src/index.ts"],
+      "@okam/directus-survey/server": ["libs/directus/directus-survey/src/server.ts"],
       "@okam/directus/directus-next": ["libs/directus/directus-next/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
       "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
