--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   },
   "private": true,
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
     "@nx/devkit": "19.3.1",
     "@nx/plugin": "19.3.1",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@nx/next": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
@@ -59,7 +58,7 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "2.10.0",
     "lodash.isequal": "4.5.0",
-    "next": "^14.1.1",
+    "next": "14.2.3",
     "radash": "11.0.0",
     "react": "18.3.1",
     "react-aria": "^3.32.0",
@@ -72,6 +71,7 @@
     "react-use": "17.4.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "server-only": "^0.0.1",
+    "survey-react-ui": "^1.11.10",
     "swiper": "11.0.6",
     "tailwind-variants": "^0.1.19",
     "tslib": "^2.6.2",
@@ -89,6 +89,7 @@
     "@nx/jest": "19.3.1",
     "@nx/js": "19.3.1",
     "@nx/linter": "19.3.1",
+    "@nx/next": "19.3.1",
     "@nx/node": "19.3.1",
     "@nx/react": "19.3.1",
     "@nx/rollup": "19.3.1",
@@ -116,11 +117,11 @@
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
+    "@types/node": "20.10.5",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
@@ -131,7 +132,7 @@
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "2.15.1",
