--- a/libs/directus/directus-next/package.json
+++ b/libs/directus/directus-next/package.json
@@ -7,11 +7,11 @@
     ".": {
       "import": "./index.mjs",
       "require": "./index.js"
+    },
+    "./server": {
+      "import": "./server.mjs",
+      "require": "./server.js"
     }
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org",
-    "access": "public"
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
