--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "private": true,
   "dependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
-    "@nx/devkit": "19.3.1",
-    "@nx/next": "19.3.1",
-    "@nx/plugin": "19.3.1",
+    "@nx/devkit": "19.8.0",
+    "@nx/next": "19.8.0",
+    "@nx/plugin": "19.8.0",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
+    "@react-spring/web": "^9.7.4",
     "@react-types/shared": "3.22.0",
     "@storybook/addon-a11y": "^7.6.17",
     "@swc/helpers": "0.5.11",
@@ -56,9 +56,8 @@
     "@tsed/exceptions": "^7.52.0",
     "babel-loader": "^9.1.3",
     "dequal": "^2.0.3",
-    "graphql": "^16.8.1",
-    "graphql-codegen": "^0.4.0",
-    "graphql-request": "^6.1.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.1.1",
     "radash": "11.0.0",
@@ -67,13 +66,12 @@
     "react-div-100vh": "0.7.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.49.2",
-    "react-i18next": "13.5.0",
-    "react-spring": "^9.7.3",
     "react-stately": "^3.30.0",
     "react-use": "17.4.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "sanitize-html": "^2.13.0",
     "server-only": "^0.0.1",
+    "storybook": "^8.2.8",
     "swiper": "11.0.6",
     "tailwind-variants": "^0.1.19",
     "tslib": "^2.6.2",
@@ -85,25 +83,26 @@
     "@babel/preset-react": "^7.14.5",
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
+    "@graphql-codegen/cli": "^5.0.2",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "@nx/cypress": "19.3.1",
-    "@nx/eslint-plugin": "19.3.1",
-    "@nx/jest": "19.3.1",
-    "@nx/js": "19.3.1",
-    "@nx/linter": "19.3.1",
-    "@nx/node": "19.3.1",
-    "@nx/react": "19.3.1",
-    "@nx/rollup": "19.3.1",
-    "@nx/storybook": "19.3.1",
-    "@nx/vite": "19.3.1",
-    "@nx/web": "19.3.1",
-    "@nx/workspace": "19.3.1",
+    "@nx/cypress": "19.8.0",
+    "@nx/eslint-plugin": "19.8.0",
+    "@nx/jest": "19.8.0",
+    "@nx/js": "19.8.0",
+    "@nx/linter": "19.8.0",
+    "@nx/node": "19.8.0",
+    "@nx/react": "19.8.0",
+    "@nx/rollup": "19.8.0",
+    "@nx/storybook": "19.8.0",
+    "@nx/vite": "19.8.0",
+    "@nx/web": "19.8.0",
+    "@nx/workspace": "19.8.0",
     "@rollup/plugin-url": "8.0.2",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-essentials": "8.3.2",
+    "@storybook/addon-interactions": "8.3.2",
     "@storybook/addon-links": "7.6.6",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/core-server": "7.6.17",
+    "@storybook/core-server": "8.3.2",
     "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "7.6.17",
     "@storybook/react-webpack5": "7.6.17",
@@ -115,8 +114,7 @@
     "@swc/core": "1.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/react": "15.0.6",
-    "@theunderscorer/nx-semantic-release": "^2.8.0",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "29.5.13",
     "@types/lodash.isequal": "4.5.8",
     "@types/node": "20.10.5",
     "@types/react": "18.2.33",
@@ -128,9 +126,9 @@
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "autoprefixer": "10.4.16",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "29.7.0",
     "core-js": "3.36.1",
-    "cypress": "^13.6.6",
+    "cypress": "13.14.2",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -151,12 +149,12 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.0.1",
-    "nx": "19.3.1",
-    "nx-cloud": "19.0.0",
+    "nx": "19.8.0",
+    "nx-cloud": "19.1.0",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
     "slugify": "1.6.6",
@@ -165,7 +163,7 @@
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.13",
     "vite-plugin-dts": "~2.3.0",
